# UdpServerClient

UdpClient/: CMakeLists.txt  main.cpp  udpclient.cpp  udpclient.h
UdpServer/: CMakeLists.txt  client.cpp  client.h  main.cpp  udpserver.cpp  udpserver.h
